my-web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-web
  namespace: default
spec:
  rules:
    - host: my-web.com
      http:
        paths:
          - path: /
            backend:
              serviceName: my-web
              servicePort: 80
